Added rc files to the // #qo flag compilation list and more TODOs.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - .exe suffix in windows builds
 - specify target type (exe, so/dll)
 - toolchain descriptions (for -tc list)
+- figure out what to do about assembly language
