--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 - specify target type (exe, so/dll)
 - toolchain descriptions (for -tc list)
 - figure out what to do about assembly language
+- figure out how to change debug symbol format on Mac OS X and MSVC to one embedded in the binary (rather than .dSYM and .pdb files, respectively)
