Still more TODOs.

--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
 - toolchain descriptions (for -tc list)
 - figure out what to do about assembly language
 - figure out how to change debug symbol format on Mac OS X and MSVC to one embedded in the binary (rather than .dSYM and .pdb files, respectively)
+- toolchain-specific pkg-configs
