--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
 - in-source build tag exclusion
 - a 'unix' OS tag (requires in-source build tag exclusions)
 - set up a FreeBSD target that uses cc? or make it just require clang?
+- build files in their directories, not the current one
 
 * TODO also need to add:
 	* gresource files: `.xml` with root tag `<gresources>`
