--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@
 - a 'unix' OS tag (requires in-source build tag exclusions)
 - set up a FreeBSD target that uses cc? or make it just require clang?
 - build files in their directories, not the current one
+- build named source files here
 
 * TODO also need to add:
 	* gresource files: `.xml` with root tag `<gresources>`
