--- a/TODO
+++ b/TODO
@@ -11,6 +11,9 @@
 - build named source files here
 - LOAD BALANCING
 - link against the real visual c++ runtime, not the windows private one
+	[12:56] <ktietz> andlabs well, partial you are right here
+	[12:57] <ktietz> you should use here always -static option, too.  As otherwise other gcc-libraries (as libgcc.DLL, libstdc++.dll, etc) getting linked in, as pe-coff is finally linked, they are linked on gcc's bootstrap against msvcrt.dll
+	- also note https://support.microsoft.com/en-us/kb/2661358
 
 * TODO also need to add:
 	* gresource files: `.xml` with root tag `<gresources>`
