--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@
 	[12:56] <ktietz> andlabs well, partial you are right here
 	[12:57] <ktietz> you should use here always -static option, too.  As otherwise other gcc-libraries (as libgcc.DLL, libstdc++.dll, etc) getting linked in, as pe-coff is finally linked, they are linked on gcc's bootstrap against msvcrt.dll
 	- also note https://support.microsoft.com/en-us/kb/2661358
+- pkg-config cross-compiling notes: http://www.freedesktop.org/wiki/Software/pkg-config/CrossCompileProposal/
 
 * TODO also need to add:
 	* gresource files: `.xml` with root tag `<gresources>`
